# csvplusplus

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
docs/: Project.md  one-pager-marketing.txt
examples/: README.md
examples/ecommerce/: README.md  convert_to_csvpp.py  ecommerce_orders.csv
examples/ecommerce/source/: customers.csv  order_items.csv  order_payments.csv  order_reviews.csv  orders.csv
examples/healthcare/: README.md  clinical_encounters.csv  convert_to_csvpp.py
examples/healthcare/source/: allergies.csv  conditions.csv  encounters.csv  medications.csv  observations.csv  patients.csv
examples/netflix/: README.md  convert_to_csvpp.py  netflix_titles.csv  netflix_titles.csvpp
ri/: .gitignore  PROMPT.md  README.md  demo.py  pyproject.toml  requirements.txt
ri/examples/: appendixB_ecommerce.csvpp  figure1_arrays_explicit.csvpp  figure2_arrays_default.csvpp  figure3_empty_values.csvpp  figure4_simple_struct.csvpp  figure5_repeated_structs.csvpp  figure6_array_in_struct.csvpp  figure7_struct_in_struct.csvpp
ri/src/csvpp/: __init__.py  header_parser.py  models.py  parser.py  pprint.py  value_parser.py
ri/src/csvpp.egg-info/: PKG-INFO  SOURCES.txt
ri/tests/: test_arrays.py  test_examples.py  test_header_parser.py  test_nested.py  test_parser.py  test_pprint.py  test_quoting.py  test_structures.py  test_validation.py
spec/: draft-mscaldas-csvpp-00.html  draft-mscaldas-csvpp-00.txt  draft-mscaldas-csvpp-00.xml  draft-mscaldas-csvpp-01.xml  draft-mscaldas-csvpp-02.xml  rfc.txt
website/: index.html
